<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="74dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/serviceNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/homecaresquad" />

        <!-- Service Name TextView -->
        <TextView
            android:id="@+id/serviceNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            tools:text="@string/service_name_header"/>

        <TextView
            android:id="@+id/appointmentAvailabilityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/serviceNameTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:text="@string/appointment_available"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold" />

        <!-- Date Button -->
        <Button
            android:id="@+id/dateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:layout_below="@id/appointmentAvailabilityTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"/>

        <!-- Display selected date -->
        <TextView
            android:id="@+id/selectedDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@id/dateButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            tools:text="@string/selected_date"/>

        <!-- Time Button -->
        <Button
            android:id="@+id/timeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:layout_below="@id/selectedDateTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"/>

        <!-- Display selected time -->
        <TextView
            android:id="@+id/selectedTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@id/timeButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            tools:text="@string/selected_time"/>

        <!-- Submit button -->
        <Button
            android:id="@+id/submitAppointmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed_to_payment"
            android:layout_below="@id/selectedTimeTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/black"/>

    </RelativeLayout>
</ScrollView>
