<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center">

    <!-- Service Name TextView -->
    <TextView
        android:id="@+id/service_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/service_name_header"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/basic_cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Basic Cost TextView -->
    <TextView
        android:id="@+id/basic_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_cost"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/standard_cost"
        app:layout_constraintStart_toStartOf="@id/service_name"
        app:layout_constraintTop_toBottomOf="@+id/service_name" />

    <!-- Standard Cost TextView -->
    <TextView
        android:id="@+id/standard_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard_cost"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/premium_cost"
        app:layout_constraintStart_toStartOf="@+id/service_name"
        app:layout_constraintTop_toBottomOf="@+id/basic_cost" />

    <!-- Premium Cost TextView -->
    <TextView
        android:id="@+id/premium_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/premium_cost"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/service_name"
        app:layout_constraintTop_toBottomOf="@+id/standard_cost" />

</androidx.constraintlayout.widget.ConstraintLayout>
