<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:context=".LoginActivity">

        <!-- Success Tick -->
        <ImageView
            android:id="@+id/green_mark_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/scheduledTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/green_tick" />

        <!-- Appointment confirmation TextView -->
        <TextView
            android:id="@+id/scheduledTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_confirmation"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/technicianNameLabelTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/green_mark_image" />

        <!-- Technician Name TextView -->
        <TextView
            android:id="@+id/technicianNameLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/technician_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/technicianNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scheduledTextView" />

        <TextView
            android:id="@+id/technicianNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technician_james"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/technicianContactLabelTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/technicianNameLabelTextView" />

        <!-- Technician Contact TextView -->
        <TextView
            android:id="@+id/technicianContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/technician_contact"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/technicianContactTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/technicianNameTextView" />

        <TextView
            android:id="@+id/technicianContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technician_james_contact"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/thanksTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/technicianContactLabelTextView" />

        <!-- Thanks TextView -->
        <TextView
            android:id="@+id/thanksTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanks_message"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/logoutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/technicianContactTextView" />

        <!-- Logout Button -->
        <Button
            android:id="@+id/logoutButton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/logout_button"
            app:layout_constraintTop_toBottomOf="@id/thanksTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
