<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignUpActivity">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/emailField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/homecaresquad" />

        <!-- Sign Up TextView -->
        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"
            android:layout_marginHorizontal="0dp"
            android:layout_marginVertical="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/signup_header"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/emailField"
            app:layout_constraintEnd_toEndOf="@id/emailField"
            app:layout_constraintStart_toStartOf="@id/emailField"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintVertical_bias="0.072" />

        <!-- Email Field -->
        <EditText
            android:id="@+id/emailField"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textSize="10dp"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <!-- Name Field -->
        <EditText
            android:id="@+id/nameField"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/name_hint"
            android:textSize="10dp"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailField" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/passwordField"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            android:textSize="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameField" />

        <!-- Confirm Password -->
        <EditText
            android:id="@+id/confirmPasswordField"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confirm_password_hint"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            android:textSize="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordField" />

        <!-- Submit Button -->
        <Button
            android:id="@+id/submitButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/black"/>

        <!-- Login Here TextView -->
        <TextView
            android:id="@+id/loginHereTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login_here"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submitButton2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
